Spacing fixed

--- a/stylesheets/posts.css
+++ b/stylesheets/posts.css
@@ -20,6 +20,7 @@ div{
   padding: 5px;
   padding-left: 20px;
   border-radius: 10px;
+  margin-top: 5px;
   margin-bottom: 12px;
   background-color: var(--color-light2);
   box-shadow: 0px 0px 1px 2px var(--color-text2);
